# CMakeLinkBoostStaticShared

./: CMakeLists.txt  CMakePresets.json  README.md
CMakeUtils/FindOrFetch/: FindDoNotFetchBoost.cmake
CMakeUtils/Handy/: DisallowInSourceBuilds.cmake  DisplayGenericInfo.cmake  SelectCompilerViaFlagIfNotUsingCMakePresets.cmake
CMakeUtils/Presets/: BuildType.json  Compilers.json  Platforms.json  SingleConfigGenerators.json
LinkBoostAsStaticOrShared/: CMakeLists.txt
LinkBoostAsStaticOrShared/hdr/: LinkBoostAsStaticOrShared.hpp
LinkBoostAsStaticOrShared/src/: LinkBoostAsStaticOrShared.cpp  MainLinkBoostAsStaticOrShared.cpp
